src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__lifecycle__tests__bridge_client_capabilities_merged_with_typical_upstream.snap
---
source: src/lsp/bridge/protocol/lifecycle.rs
expression: merged
---
{
  "general": {
    "positionEncodings": [
      "utf-16"
    ]
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "commitCharactersSupport": true,
        "deprecatedSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext"
        ],
        "insertReplaceSupport": true,
        "insertTextModeSupport": {
          "valueSet": [
            1,
            2
          ]
        },
        "labelDetailsSupport": true,
        "preselectSupport": true,
        "resolveSupport": {
          "properties": [
            "documentation",
            "detail",
            "additionalTextEdits",
            "sortText",
            "filterText",
            "insertText",
            "textEdit",
            "insertTextFormat",
            "insertTextMode"
          ]
        },
        "snippetSupport": true,
        "tagSupport": {
          "valueSet": [
            1
          ]
        }
      },
      "dynamicRegistration": false
    },
    "declaration": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "definition": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "diagnostic": {
      "dynamicRegistration": true,
      "relatedDocumentSupport": true
    },
    "documentHighlight": {
      "dynamicRegistration": false
    },
    "documentLink": {
      "dynamicRegistration": false,
      "tooltipSupport": true
    },
    "documentSymbol": {
      "dynamicRegistration": false,
      "hierarchicalDocumentSymbolSupport": true
    },
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext"
      ],
      "dynamicRegistration": false
    },
    "implementation": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "inlayHint": {
      "dynamicRegistration": false
    },
    "moniker": {
      "dynamicRegistration": false
    },
    "references": {
      "dynamicRegistration": false
    },
    "signatureHelp": {
      "dynamicRegistration": false,
      "signatureInformation": {
        "activeParameterSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext"
        ],
        "parameterInformation": {
          "labelOffsetSupport": true
        }
      }
    },
    "typeDefinition": {
      "dynamicRegistration": false,
      "linkSupport": true
    }
  },
  "workspace": {
    "diagnostics": {
      "refreshSupport": true
    }
  }
}
