src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__lifecycle__tests__bridge_client_capabilities_snapshot.snap
---
source: src/lsp/bridge/protocol/lifecycle.rs
expression: capabilities
---
{
  "general": {
    "positionEncodings": [
      "utf-16"
    ]
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "insertReplaceSupport": true,
        "snippetSupport": true
      },
      "dynamicRegistration": false
    },
    "declaration": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "definition": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "diagnostic": {
      "dynamicRegistration": true,
      "relatedDocumentSupport": true
    },
    "documentHighlight": {
      "dynamicRegistration": false
    },
    "documentLink": {
      "dynamicRegistration": false,
      "tooltipSupport": true
    },
    "documentSymbol": {
      "dynamicRegistration": false,
      "hierarchicalDocumentSymbolSupport": true
    },
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext"
      ],
      "dynamicRegistration": false
    },
    "implementation": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "inlayHint": {
      "dynamicRegistration": false
    },
    "moniker": {
      "dynamicRegistration": false
    },
    "references": {
      "dynamicRegistration": false
    },
    "signatureHelp": {
      "dynamicRegistration": false
    },
    "typeDefinition": {
      "dynamicRegistration": false,
      "linkSupport": true
    }
  },
  "workspace": {
    "diagnostics": {
      "refreshSupport": true
    }
  }
}
