src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__lifecycle__tests__didclose_notification_has_correct_structure.snap
---
source: src/lsp/bridge/protocol/lifecycle.rs
expression: notification
---
{
  "jsonrpc": "2.0",
  "method": "textDocument/didClose",
  "params": {
    "textDocument": {
      "uri": "file:///project/test.lua"
    }
  }
}
