src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__lifecycle__tests__exit_notification_has_correct_structure.snap
---
source: src/lsp/bridge/protocol/lifecycle.rs
expression: notification
---
{
  "jsonrpc": "2.0",
  "method": "exit",
  "params": null
}
