src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__lifecycle__tests__initialize_request_has_correct_structure.snap
---
source: src/lsp/bridge/protocol/lifecycle.rs
expression: request
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "method": "initialize",
  "params": {
    "processId": "[PID]",
    "rootUri": null,
    "capabilities": {
      "workspace": {
        "diagnostics": {
          "refreshSupport": true
        }
      },
      "textDocument": {
        "completion": {
          "dynamicRegistration": false,
          "completionItem": {
            "insertReplaceSupport": true
          }
        },
        "hover": {
          "dynamicRegistration": false
        },
        "signatureHelp": {
          "dynamicRegistration": false
        },
        "references": {
          "dynamicRegistration": false
        },
        "documentHighlight": {
          "dynamicRegistration": false
        },
        "documentSymbol": {
          "dynamicRegistration": false,
          "hierarchicalDocumentSymbolSupport": true
        },
        "declaration": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "definition": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "typeDefinition": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "implementation": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "documentLink": {
          "dynamicRegistration": false,
          "tooltipSupport": true
        },
        "moniker": {
          "dynamicRegistration": false
        },
        "inlayHint": {
          "dynamicRegistration": false
        },
        "diagnostic": {
          "dynamicRegistration": true,
          "relatedDocumentSupport": true
        }
      },
      "general": {
        "positionEncodings": [
          "utf-16"
        ]
      }
    }
  }
}
