src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__lifecycle__tests__initialize_request_has_correct_structure@default.snap
---
source: src/lsp/bridge/protocol/lifecycle.rs
expression: request
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "method": "initialize",
  "params": {
    "processId": "[PID]",
    "rootUri": null,
    "capabilities": {
      "workspace": {
        "executeCommand": {
          "dynamicRegistration": false
        },
        "workspaceFolders": true,
        "configuration": true,
        "diagnostics": {
          "refreshSupport": true
        }
      },
      "textDocument": {
        "synchronization": {
          "dynamicRegistration": false,
          "didSave": true
        },
        "completion": {
          "dynamicRegistration": false,
          "completionItem": {
            "insertReplaceSupport": true
          }
        },
        "hover": {
          "dynamicRegistration": false
        },
        "signatureHelp": {
          "dynamicRegistration": false
        },
        "references": {
          "dynamicRegistration": false
        },
        "documentHighlight": {
          "dynamicRegistration": false
        },
        "documentSymbol": {
          "dynamicRegistration": false,
          "hierarchicalDocumentSymbolSupport": true
        },
        "declaration": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "definition": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "typeDefinition": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "implementation": {
          "dynamicRegistration": false,
          "linkSupport": true
        },
        "codeAction": {
          "dynamicRegistration": false,
          "codeActionLiteralSupport": {
            "codeActionKind": {
              "valueSet": [
                "quickfix",
                "refactor",
                "refactor.extract",
                "refactor.inline",
                "refactor.rewrite",
                "source",
                "source.organizeImports",
                "source.fixAll"
              ]
            }
          },
          "isPreferredSupport": true,
          "disabledSupport": true,
          "dataSupport": true,
          "resolveSupport": {
            "properties": [
              "edit"
            ]
          }
        },
        "documentLink": {
          "dynamicRegistration": false,
          "tooltipSupport": true
        },
        "colorProvider": {
          "dynamicRegistration": false
        },
        "callHierarchy": {
          "dynamicRegistration": false
        },
        "moniker": {
          "dynamicRegistration": false
        },
        "typeHierarchy": {
          "dynamicRegistration": false
        },
        "inlayHint": {
          "dynamicRegistration": false
        },
        "diagnostic": {
          "dynamicRegistration": true,
          "relatedDocumentSupport": true
        }
      },
      "general": {
        "positionEncodings": [
          "utf-16"
        ]
      },
      "experimental": {
        "kakehashi": {
          "bridgeRouting": true,
          "bridgePeer": true
        }
      }
    }
  }
}
